--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Poppins:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!---header section---->
     <section>
-        <div class="container">
+        <div class="container display-flex">
             <div class="half-width">
                 <div class="header-text">
                     <div class="border"></div>
-                    <h1>Stay Focused on <span class="heading-color">Mission 2022</span></h1>
+                    <h1>Best Web Development <span class="heading-color">Company In Bangladesh</span></h1>
                 </div>
-                <p class="header-sub-text">Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
+                <p class="header-sub-text">A website represents your company & its culture. We the best web development
+                    company in Bangladesh help you to build such a website that will promote your business worldwide</p>
                 <a class="button" href="#">Explore Now</a>
                 <p class="header-scroll-text">Scroll down to explore more about us</p>
             </div>
             <div class="half-width">
-                <img class="header-image" src="images/person/person-2.png" alt="person_image">
+                <img class="header-image" src="images/person/person-7.png" alt="person_image">
             </div>
         </div>
     </section>
@@ -38,30 +38,137 @@
     <!---Mission section-->
     <section>
         <h1 class="mission-heading-text">My Mission in <span class="heading-color">2022</span></h1>
-        <div class="container">
+        <div class="container display-flex">
             <div class="mission-box box-bg-1">
                 <img src="images/illustrators/illustrator-1.png" alt="illustrator-1">
                 <h3>Mission</h3>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
+                <p>Our mission is to continually raise the bar of the customer experience by using the internet and
+                    technology to help consumers find, discover and buy anything, and empower businesses and content
+                    creators to maximise their success. We aim to be Earth's most customer centric company.</p>
             </div>
             <div class="mission-box box-bg-2">
                 <img src="images/illustrators/illustrator-2.png" alt="illustrator-2">
                 <h3>Vission</h3>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
+                <p>A vision is a vivid mental image of what you want your business to be at some point in the future,
+                    based on your goals and aspirations. Having a vision will give your business a clear focus, and can
+                    stop you heading in the wrong direction</p>
             </div>
             <div class="mission-box box-bg-3">
                 <img src="images/illustrators/illustrator-3.png" alt="illustrator-3">
                 <h3>Goals</h3>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
+                <p>As with any other commercial business, information technology companies have short-term and long-term
+                    financial objectives that include survival, profit maximization, sales and customer service, as well
+                    as economic growth</p>
             </div>
         </div>
     </section>
+    <!--Develop without limit-->
+    <section class="section-padding display-flex">
+
+        <div class="item-box-1">
+            <img class="item-box-img-1" src="images/shapes/shape-1.png" alt="shapes-picture">
+            <img class="item-box-img-2" src="images/shapes/dotted-1.png" alt="dotted-picture">
+
+        </div>
+        <div class="item-box-2">
+            <img src="images/pictures/coding.png" alt="coding pictures">
+        </div>
+        <div class="item-box-3">
+
+            <h1>Highly skilled Front-end & Back-end <br>Developer</h1>
+            <p class="header-sub-text">Front end and Back end are the two most crucial people for web development to
+                become successful. Their scope of work is quite different but linked up with each other.
+
+                For a successful website design and development, each side needs to communicate and operate effectively.
+                We have expert front-end and back-end developers who know very clearly what they are doing.
+
+                As the best web development company in Bangladesh, we specialize in converting your visual ideas into
+                coding.
+
+                Our front end and back end development ensures your business website procure more security, scalability,
+                and agility.
+
+                At the same time, Our creative guideline ensures that your website gets found on Google.</p>
+            <a class="button" href="#">Read the documentation</a>
+        </div>
+        <div class="item-box-4">
+            <img src="images/shapes/dotted-1.png" alt="dotted-picture">
+        </div>
+
+    </section>
+    <!---know your global community-->
+    <section class="section-padding">
+        <div class="container display-flex">
+            <div class="global-content-1">
+                <h1>Free Technical Support<br>For 90 days</h1>
+                <p class="header-sub-text">We, the website development company in Bangladesh, offer consistent
+                    technology upgrades and an extensive array of website maintenance support that will provide the
+                    visitor a seamless online experience. At the same time, maximize your site performance.
+
+                    Our experts’ team is well-equipped to handle all kinds of website maintenance activities. We offer
+                    90 days of free technical support to make sure your site is performing well and is available when
+                    your customer needs it.</p>
+                <a class="button" href="#">Read the documentation</a>
+            </div>
+            <div class="global-content-2">
+                <img class="global-content-img" src="images/pictures/project.png" alt="projects-picture">
+                <img class="global-shape-img" src="images/shapes/shape-1.png" alt="">
+            </div>
+
+        </div>
+    </section>
+    <!---my service-->
+    <section class="section-padding service-bg">
+        <div class="container display-flex">
+            <div class="service-content-1 ">
+                <div class="display-flex">
+                    <div class="service-content-item box-bg-1">
+                        <img src="images/icons/web.png" alt="">
+                        <h3>Website Design</h3>
+                        <p>Generate greater revenue & leads with our professional website designers & website developers
+                            in Bangladesh. Maximize the chances to attract clients through best website design company
+                            in Bangladesh. Also, increase the scalability of the website through professional web
+                            designers & web developers in Bangladesh.</p>
+                    </div>
+                    <div class="service-content-item box-bg-2">
+                        <img src="images/icons/graphics.png" alt="">
+                        <h3>Graphics Design</h3>
+                        <p>Digital media is a blend of technology and content. Building the digital media products
+                            require a whole professional team with technical, artistic, and analytical skills. Digital
+                            media products need to be engaging and easy to use. </p>
+                    </div>
+                </div>
+                <div class="display-flex">
+                    <div class="service-content-item box-bg-3">
+                        <img src="images/icons/uiux.png" alt="">
+                        <h3>UI/UX Design</h3>
+                        <p>Want to build your product with a team that establishes a clear design process, meets
+                            deadlines, and delivers a spot-on end result? Turn to Intellectsoft’s UI and UX services.
+                            Our design team is a small design studio within a large software company that will help you
+                            build an engaging product easily and quickly.</p>
+                    </div>
+                    <div class="service-content-item box-bg-4">
+                        <img src="images/icons/digital-marketing.png" alt="">
+                        <h3>Digital Marketing</h3>
+                        <p>Grow your business with professional web designers & Digital Marketing services.
+                            Consequently, generate maximum traffic with affordable top website design & Digital
+                            marketing solutions within your budget. We always use latest trends to analyze your website
+                            & conversion strategy.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="service-content-2">
+                <h1 class="service-heading-text">Service Provide <br><span class="heading-color">For My
+                        Clients.</span></h1>
+                <a class="button" href="#">Download prospectus</a>
+            </div>
+        </div>
+    </section>
+    <!--footer-->
+    <footer>
+        <h1 class="footer-heading-text">Mission <span class="footer-heading-subtext-color">2022</span></h1>
+        <p class="footer-sub-text">Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
 
 </html>
